--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                 <div class="app-download">
                     <p>Download app from</p>
                     <div class="app-stores">
-                        <a href=""><img src="/ZOMATO PROJECT/IMAGE/gpay.webp" alt="Google Play Store" style="margin-bottom: 13px;" ></a>
-                        <a href=""><img src="/ZOMATO PROJECT/IMAGE/appstore.webp" alt="App Store" style="margin-bottom: 13px;"></a>
+                        <a href=""><img src="IMAGE/gpay.webp" alt="Google Play Store" style="margin-bottom: 13px;" ></a>
+                        <a href=""><img src="IMAGE/appstore.webp" alt="App Store" style="margin-bottom: 13px;"></a>
                     </div>
                 </div>
             </div>
