--- a/index.html
+++ b/index.html
@@ -95,35 +95,43 @@
                 <p>146 places</p></a>
             </div>
             <div class="card">
+                 <a href="https://maps.app.goo.gl/CMwRAGAgVRmJvJQJ9" target="_blank">
                 <h3>Golambar</h3>
-                <p>203 places</p>
+                <p>203 places</p></a>
             </div>
             <div class="card">
+                <a href="https://maps.app.goo.gl/XZzyCooAdWwqxw8T9" target="_blank">
                 <h3>Sri Krishnapuri</h3>
-                <p>207 places</p>
+                <p>207 places</p></a>
             </div>
             <div class="card">
+                <a href="https://maps.app.goo.gl/aTsJuNXbf8hRG49r5" target="_blank">
                 <h3>Kankarbagh</h3>
-                <p>530 places</p>
+                <p>530 places</p></a>
             </div>
             <div class="card">
+                <a href="https://maps.app.goo.gl/EPHo8sHATrTsL9vR8" target="_blank">
                 <h3>Patliputra Colony</h3>
-                <p>237 places</p>
+                <p>237 places</p></a>
             </div>
             <div class="card">
+                <a href="https://maps.app.goo.gl/fMyWQdQbvDHDpwQt9" target="_blank">
                 <h3>Lodipur</h3>
-                <p>60 places</p>
+                <p>60 places</p></a>
             </div>
             <div class="card">
+                <a href="https://maps.app.goo.gl/yGw7eiABT9sZLd3j9" target="_blank">
                 <h3>Khajpura</h3>
-                <p>307 places</p>
+                <p>307 places</p></a>
             </div>
             <div class="card">
+                <a href="https://maps.app.goo.gl/Euks7jZjECgBCv1E6" target="_blank">
                 <h3>Kidwaipuri</h3>
-                <p>110 places</p>
+                <p>110 places</p></a>
             </div>
             <div class="card">
-                <h3>See More</h3>
+                <a href="https://maps.app.goo.gl/dnmRwtHu56kYeuQZ8" target="_blank">
+                <h3>See More</h3></a>
             </div>
         </div>
     </div>
@@ -151,8 +159,8 @@
                 <div class="app-download">
                     <p>Download app from</p>
                     <div class="app-stores">
-                        <a href=""><img src="IMAGE/gpay.webp" alt="Google Play Store" style="margin-bottom: 13px;" ></a>
-                        <a href=""><img src="IMAGE/appstore.webp" alt="App Store" style="margin-bottom: 13px;"></a>
+                        <a href="https://play.google.com/store/apps/details?id=com.application.zomato&hl=en_IN"><img src="IMAGE/gpay.webp" alt="Google Play Store" style="margin-bottom: 13px;" ></a>
+                        <a href="https://apps.apple.com/in/app/zomato-food-delivery-dining/id434613896"><img src="IMAGE/appstore.webp" alt="App Store" style="margin-bottom: 13px;"></a>
                     </div>
                 </div>
             </div>
